<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dsol</groupId>
	<artifactId>dsol</artifactId>
	<version>3.0.0</version>
	<packaging>pom</packaging>

	<name>DSOL version 3</name>
	<description>Distributed Simulation Object Library version 3</description>
	<url>http://www.simulation.tudelft.nl</url>

	<organization>
		<name>Delft University of Technology, Systems and Simulation Section</name>
		<url>http://www.simulation.tudelft.nl</url>
	</organization>

	<profiles>
		<!-- select profiles with -P option, e.g. "mvn install -P all" -->
		<profile>
			<id>all</id>
			<activation>
				<property>
					<name>all</name>
				</property>
			</activation>
			<modules>
				<!-- generic base package -->
				<module>../dsol-base</module>

				<!-- dsol core package -->
				<module>../dsol-core</module>

				<!-- user interface, animation and statistics display -->
				<module>../dsol-swing</module>
				<module>../dsol-fx</module>
				<module>../dsol-web</module>

				<!-- examples and tutorial -->
				<module>../dsol-demo</module>

				<!-- hla -->
				<module>../dsol-hla</module>
			</modules>
		</profile>
	</profiles>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dsol-version>${project.version}</dsol-version>
		<junit.version>4.11</junit.version>
		<java3d.version>1.5.1</java3d.version>
		<jcommon.version>1.0.21</jcommon.version>
		<jfreechart.version>1.0.17</jfreechart.version>
		<colt.version>1.2.0</colt.version>
		<xerces.version>2.11.0</xerces.version>
		<jdom.version>2.0.5</jdom.version>
	</properties>


	<!-- Build Settings -->

	<build>
		<directory>target</directory>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
		<outputDirectory>${basedir}/target/classes</outputDirectory>
		<testOutputDirectory> ${basedir}/target/test-classes</testOutputDirectory>

		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${basedir}/src/main/resources</directory>
			</testResource>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
			</testResource>
		</testResources>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>2.6</version>
			</extension>

			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>1.0-beta-6</version>
			</extension>
		</extensions>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.3</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<links>
						<link>http://download.oracle.com/javase/7/docs/api/</link>
						<link>http://download.java.net/media/java3d/javadoc/1.5.0/</link>
						<link>http://www.jfree.org/jcommon/api/</link>
						<link>http://www.jfree.org/jfreechart/api/javadoc/</link>
						<link>http://junit.sourceforge.net/javadoc/</link>
						<link>http://xerces.apache.org/xerces2-j/javadocs/api/</link>
						<link>http://www.jdom.org/docs/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol-base/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol-swing/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol-fx/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol-web/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol-demo/apidocs/</link>
						<link>http://simulation.tudelft.nl/dsol/3.0/dsol-hla/apidocs/</link>
					</links>
					<additionalJOption>-J-Xmx1024m</additionalJOption>
					<detectJavaApiLink>true</detectJavaApiLink>
					<detectLinks>false</detectLinks>
					<detectOfflineLinks>true</detectOfflineLinks>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.12.1</version>
				<dependencies>
					<dependency>
						<groupId>dsol</groupId>
						<artifactId>dsol-build-tools</artifactId>
						<version>${dsol-version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<goals>
							<goal>instrument</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>-XX:MaxPermSize=4096m -Xmx4096m</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.5.4</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>

		</plugins>

	</build>

	<reporting>
		<outputDirectory>${basedir}/target/site</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>dependencies</report>
							<report>project-team</report>
							<report>mailing-list</report>
							<report>license</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<detectLinks>false</detectLinks>
					<detectOfflineLinks>true</detectOfflineLinks>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>test-html</id>
						<reports>
							<report>test-javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.12.1</version>
				<configuration>
					<configLocation>development/dsol-checks.xml</configLocation>
				</configuration>
				<reportSets>
					<reportSet>
						<configuration>
							<enableRulesSummary>true</enableRulesSummary>
						</configuration>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<argLine>-XX:MaxPermSize=4096m -Xmx4096m</argLine>
				</configuration>
			</plugin>

			<!-- test coverage report -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
			</plugin>

			<!-- todos -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<tagListOptions>
						<tagClasses>
							<tagClass>
								<displayName>Open issues in the code</displayName>
								<tags>
									<tag>
										<matchString>TODO</matchString>
										<matchType>exact</matchType>
									</tag>
									<tag>
										<matchString>FIXME</matchString>
										<matchType>exact</matchType>
									</tag>
									<tag>
										<matchString>XXX</matchString>
										<matchType>exact</matchType>
									</tag>
								</tags>
							</tagClass>
						</tagClasses>
					</tagListOptions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.5.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<targetJdk>1.7</targetJdk>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<version>2.10</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

		</plugins>
	</reporting>

	<!-- dependency versions for all projects -->

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
				<optional>true</optional>
			</dependency>

			<dependency>
				<groupId>java3d</groupId>
				<artifactId>vecmath</artifactId>
				<version>${java3d.version}</version>
			</dependency>

			<dependency>
				<groupId>java3d</groupId>
				<artifactId>j3d-core</artifactId>
				<version>${java3d.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jcommon</artifactId>
				<version>${jcommon.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jfreechart</artifactId>
				<version>${jfreechart.version}</version>
			</dependency>

			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>${xerces.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jdom</groupId>
				<artifactId>jdom2</artifactId>
				<version>${jdom.version}</version>
			</dependency>

			<dependency>
				<groupId>colt</groupId>
				<artifactId>colt</artifactId>
				<version>${colt.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-base</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-swing</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-fx</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-demo</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dsol</groupId>
				<artifactId>dsol-hla</artifactId>
				<version>${project.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<name>DSOL Public Repository</name>
			<id>dsol</id>
			<url>http://simulation.tudelft.nl/maven</url>
		</repository>

		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<url>http://repo1.maven.org/maven2</url>
		</repository>

		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>mvnrepository</id>
			<name>mvnrepository</name>
			<url>http://mvnrepository.com/artifact</url>
		</repository>

		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>apache</id>
			<name>apache</name>
			<url>http://repo.maven.apache.org/maven2</url>
		</repository>

	</repositories>


	<!-- More Project Information -->

	<inceptionYear>2002</inceptionYear>

	<licenses>
		<license>
			<name>BSD-style license</name>
			<url>http://simulation.tudelft.nl/dsol/3.0/dsol/dsol-license.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>PeterJacobs</id>
			<name>Peter H.M. Jacobs</name>
			<email>phmjacobs@hotmail.com</email>
			<organization>Delft University of Technology, the Netherlands</organization>
			<organizationUrl>http://www.tudelft.nl</organizationUrl>
			<timezone>1</timezone>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>averbraeck</id>
			<name>Alexander Verbraeck</name>
			<email>a.verbraeck@tudelft.nl</email>
			<url>http://www.tbm.tudelft.nl/averbraeck</url>
			<organization>Delft University of Technology, the Netherlands</organization>
			<organizationUrl>http://www.simulation.tudelft.nl</organizationUrl>
			<timezone>1</timezone>
			<roles>
				<role>architect</role>
				<role>developer</role>
				<role>maintainance</role>
			</roles>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Niels Lang</name>
			<organization>Erasmus University Rotterdam, the Netherlands</organization>
			<organizationUrl>http://www.rsm.eur.nl</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>1</timezone>
		</contributor>
		<contributor>
			<name>Stijn-Pieter van Houten</name>
			<organization>Delft University of Technology, the Netherlands</organization>
			<organizationUrl>http://www.tudelft.nl</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>1</timezone>
		</contributor>
		<contributor>
			<name>Roy Chin</name>
			<organization>Delft University of Technology, the Netherlands</organization>
			<organizationUrl>http://www.tudelft.nl</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>1</timezone>
		</contributor>
		<contributor>
			<name>Mamadou Seck</name>
			<organization>Old Dominion University, USA</organization>
			<organizationUrl>http://www.odu.edu</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-5</timezone>
		</contributor>
	</contributors>

	<!-- Environment Settings -->

	<scm>
		<connection>scm:svn:https://svn.tbm.tudelft.nl/DSOL300/</connection>
		<url>http://svn.tbm.tudelft.nl/</url>
		<developerConnection>scm:svn:https://svn.tbm.tudelft.nl/DSOL300/</developerConnection>
	</scm>

	<!-- In order for distributionManagement to work, include the following
		in local settings.xml:
		<servers>
		<server>
		<id>dsol-deployment</id>
		<username>dsol</username>
		<password>(if wanted)</password>
		</server>
		</servers>
	-->

	<distributionManagement>
		<downloadUrl>http://simulation.tudelft.nl/maven</downloadUrl>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>dsol-deployment</id>
			<name>dsol repository</name>
			<url>sftp://simulation.tudelft.nl/home/web/simulation.tudelft.nl/html/maven</url>
			<layout>default</layout>
		</repository>
		<snapshotRepository>
			<uniqueVersion>true</uniqueVersion>
			<id>dsol-deployment</id>
			<name>dsol language snapshots</name>
			<url>sftp://simulation.tudelft.nl/home/web/simulation.tudelft.nl/html/maven</url>
			<layout>default</layout>
		</snapshotRepository>
		<site>
			<id>dsol-deployment</id>
			<name>dsol language website</name>
			<url>sftp://simulation.tudelft.nl/home/web/simulation.tudelft.nl/html/dsol/3.0</url>
		</site>
	</distributionManagement>

</project>